criacao da pagina princpipal

--- a/Pagina_disciplinas/disciplinas.html
+++ b/Pagina_disciplinas/disciplinas.html
@@ -10,17 +10,10 @@
 
 <body>
 
-    <header></header>
-    <div class="disciplinas_about">
-        <div class="container_about">
-            <div class="escrever_about">
-                <h1>AQUI <span>"VC"</span> PESQUISA SEU CURSO!</h1>
-                <p>Nossa plataforma oferece diversos cursos para você!</p>
-                <a href="#disciplinas">Descer</a>
-            </div>
-            <img src="../img/about.png" alt="">
-        </div>
-    </div>
+    <header>
+
+    </header>
+
 
     <div id="disciplinas">
         <div class="container_disciplinas">
@@ -35,8 +28,9 @@
                     <button data-categoria="front-end">Front-End</button>
                 </div>
 
+                <!-- A barra vai para o header -->
                 <div class="pesquisar">
-                    <input type="text" id="pesquisarInput" placeholder="Pesquise aqui!">
+                    <input type="text" id="pesquisarInput" placeholder="escrea aqui">
                 </div>
 
             </div>
