header cursos e nome dos cursos

--- a/Pagina_disciplina/Computacao_modulo1/computacao1.html
+++ b/Pagina_disciplina/Computacao_modulo1/computacao1.html
@@ -10,7 +10,23 @@
 
 <body>
 
-    <header>as</header>
+    <!-- Header -->
+    <header>
+        <div class="container_header_curso">
+
+            <div class="escrita_header_curso">
+                <a href="../../index.html"><img src="../../img/logo.png" alt=""></a>
+                <span>|</span>
+                <div class="links_header_curso"></div>
+            </div>
+
+            <button class="header_compartilhe">Compartilhar <img src="../../img/compartilhe.png" alt=""></button>
+
+        </div>
+
+    </header>
+
+    <!-- conteudo -->
     <div class="all">
 
         <div class="topicos">
