--- a/Pagina_disciplinas/disciplinas.html
+++ b/Pagina_disciplinas/disciplinas.html
@@ -17,11 +17,16 @@
 
     <div id="disciplinas">
         <div class="container_disciplinas">
-            <h1>Cursos</h1>
-            <div class="linha"></div>
+
+            <div class="escrita_disciplinas">
+                <h1>Aqui estao nossos CURSOS</h1>
+                <div class="linha"></div>
+            </div>
+
 
             <div class="cabecario_disciplinas">
 
+                
                 <div class="filtro_categorias">
                     <button data-categoria="todas">Todas</button>
                     <button data-categoria="back-end">Back-End</button>
@@ -30,8 +35,13 @@
 
                 <!-- A barra vai para o header -->
                 <div class="pesquisar">
-                    <input type="text" id="pesquisarInput" placeholder="escrea aqui">
+                    <input type="text" id="pesquisarInput" placeholder="">
+
+                    <div class="pesquisarInput_lado">
+                        <img src="../img/search.png" alt="">
+                    </div>
                 </div>
+
 
             </div>
 
@@ -39,7 +49,7 @@
 
         </div>
     </div>
-    
+
     <script src="filtrar.js"></script>
 </body>
 
