--- a/Pagina_disciplina/Banco_modulo1/banco1.html
+++ b/Pagina_disciplina/Banco_modulo1/banco1.html
@@ -9,8 +9,23 @@
 </head>
 
 <body>
+    <!-- Header -->
+    <header>
+        <div class="container_header_curso">
 
-    <header>as</header>
+            <div class="escrita_header_curso">
+                <a href="../../index.html"><img src="../../img/logo.png" alt=""></a>
+                <span>|</span>
+                <div class="links_header_curso"></div>
+            </div>
+
+            <button class="header_compartilhe">Compartilhar <img src="../../img/compartilhe.png" alt=""></button>
+
+        </div>
+
+    </header>
+
+    <!-- Conteudo -->
     <div class="all">
 
         <div class="topicos">
