--- a/Pagina_disciplinas/disciplinas.html
+++ b/Pagina_disciplinas/disciplinas.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -26,14 +26,11 @@
 
             <div class="cabecario_disciplinas">
 
-                
                 <div class="filtro_categorias">
                     <button data-categoria="todas">Todas</button>
                     <button data-categoria="back-end">Back-End</button>
                     <button data-categoria="front-end">Front-End</button>
                 </div>
-
-                <!-- A barra vai para o header -->
                 <div class="pesquisar">
                     <input type="text" id="pesquisarInput" placeholder="">
 
@@ -42,8 +39,7 @@
                     </div>
                 </div>
 
-
-            </div>
+            </div> 
 
             <div class="cards"></div>
 
