--- a/Pagina_disciplinas/disciplinas.html
+++ b/Pagina_disciplinas/disciplinas.html
@@ -9,12 +9,29 @@
 </head>
 
 <body>
+    <!-- Header -->
 
     <header>
+        <div class="container_header_disciplinas">
+            <div class="links_disciplinas">
+                <img src="" alt="">
+                <a href="#">Inicio</a>
+                <a href="#">Cursos</a>
+                <a href="#">Quem somos?</a>
+            </div>
 
+            <div class="pesquisar">
+                <input type="text" id="pesquisarInput" placeholder="">
+
+                <div class="pesquisarInput_lado">
+                    <img src="../img/search.png" alt="">
+                </div>
+            </div>
+
+        </div>
     </header>
 
-
+    <!-- Conteudo -->
     <div id="disciplinas">
         <div class="container_disciplinas">
 
@@ -23,6 +40,7 @@
                 <div class="linha"></div>
             </div>
 
+            <div class="linha_grande"></div>
 
             <div class="cabecario_disciplinas">
 
@@ -31,13 +49,7 @@
                     <button data-categoria="back-end">Back-End</button>
                     <button data-categoria="front-end">Front-End</button>
                 </div>
-                <div class="pesquisar">
-                    <input type="text" id="pesquisarInput" placeholder="">
 
-                    <div class="pesquisarInput_lado">
-                        <img src="../img/search.png" alt="">
-                    </div>
-                </div>
 
             </div> 
 
