--- a/Pagina_disciplina/Java_modulo1/java1.html
+++ b/Pagina_disciplina/Java_modulo1/java1.html
@@ -14,7 +14,7 @@
         <div class="container_header_curso">
 
             <div class="escrita_header_curso">
-                <a href="../../index.html"><img src="../../img/logo.png" alt=""></a>
+                <a href="../../index.html"><img src="" alt=""></a>
                 <span>|</span>
                 <div class="links_header_curso"></div>
             </div>
@@ -24,6 +24,18 @@
         </div>
 
     </header>
+
+    <!-- quadrado do compratilhe -->
+    <div class="caixa_branca" id="caixa_branca">
+        <div class="popup">
+            <div class="escrita_popup">
+                <label for="linkInput">Compartilhe nossos cursos!</label>
+                <button id="closeButton"><img src="../../img/close_compartihe.png" alt=""></button>
+            </div>
+            <input type="text" id="linkInput" readonly />
+            <p>Copie o link e seja feliz :D</p>
+        </div>
+    </div>
 
     <!-- conteudo -->
     <div class="all">
