pagina de disciplinas e disciplina

--- a/Pagina_disciplinas/disciplinas.html
+++ b/Pagina_disciplinas/disciplinas.html
@@ -14,10 +14,10 @@
     <header>
         <div class="container_header_disciplinas">
 
-            <img src="../img/banco1.png" alt="">
+            <a href="../index.html"><img src="" alt=""></a>
 
             <div class="pesquisar">
-                <input type="text" id="pesquisarInput" placeholder="">
+                <input type="text" id="pesquisarInput" placeholder=" Escreva aqui sua busca..!">
 
                 <div class="pesquisarInput_lado">
                     <img src="../img/search.png" alt="">
@@ -32,7 +32,7 @@
 
             <div class="conteudo_disciplinas">
                 <div class="escrita_disciplinas">
-                    <h1>Aqui estao nossos CURSOS</h1>
+                    <h1>Aqui estao nossos <span>CURSOS</span></h1>
                 </div>
     
                 <div class="cabecario_disciplinas">
