--- a/Pagina_disciplinas/disciplinas.html
+++ b/Pagina_disciplinas/disciplinas.html
@@ -32,12 +32,13 @@
 
             <div class="conteudo_disciplinas">
                 <div class="escrita_disciplinas">
-                    <h1>Aqui estao nossos <span>CURSOS</span></h1>
+                    <h1>Aqui estão nossos <span>CURSOS</span></h1>
                 </div>
     
                 <div class="cabecario_disciplinas">
                     <div class="filtro_categorias">
                         <button data-categoria="todas">Todas</button>
+                        <button data-categoria="full-stack">Full-stack</button>
                         <button data-categoria="back-end">Back-End</button>
                         <button data-categoria="front-end">Front-End</button>
                     </div>
