hover nos cards

--- a/Pagina_disciplinas/disciplinas.html
+++ b/Pagina_disciplinas/disciplinas.html
@@ -14,7 +14,7 @@
     <header>
         <div class="container_header_disciplinas">
 
-            <a href="../index.html"><img src="" alt=""></a>
+            <a href="../index.html"><img src="../img/seta.png" alt=""></a>
 
             <div class="pesquisar">
                 <input type="text" id="pesquisarInput" placeholder=" Escreva aqui sua busca..!">
