--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@
 <body>
 
 
-
-
-
     <div class="disciplinas_about">
         <div class="container_about">
             <div class="escrever_about">
@@ -22,5 +19,8 @@
             <img src="../img/about.png" alt="">
         </div>
     </div>
+
+    <script src="cadastro-conta/cadastro.js"></script>
+
 </body>
 </html>
