organizacao de documentos

--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -72,6 +72,6 @@
       </div>
       <a href="../index.html"></a>
 
-  <script src="cadastro.js"></script>
+  <script src="../js/cadastro.js"></script>
 </body>
 </html>
