--- a/pages/disciplinas.html
+++ b/pages/disciplinas.html
@@ -55,13 +55,11 @@
     <!-- Cards -->
 
     <div class="cards_all">
-        <div class="cards">
-
-        </div>
+        <div class="cards"></div>
     </div>
 
 
-    <script src="filtrar.js"></script>
+    <script src="../js/disciplinas.js"></script>
 </body>
 
 </html>
