--- a/pages/index.html
+++ b/pages/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="../css/index.css">
     <title>Document</title>
     <style>
         body {
@@ -67,11 +67,11 @@
             <img src="../img/about.png" alt="">
         </div>
         <div id="cursos">
-            <a href="Pagina_disciplinas/disciplinas.html">Veja mais cursos!</a>
+            <a href="../pages/disciplinas.html">Veja mais cursos!</a>
         </div>
     </div>
 
-    <script src="index.js"></script>
+    <script src="../js/index.js"></script>
 
 </body>
 </html>
