--- a/Pagina_disciplina/Banco_modulo1/banco1.html
+++ b/Pagina_disciplina/Banco_modulo1/banco1.html
@@ -14,7 +14,7 @@
         <div class="container_header_curso">
 
             <div class="escrita_header_curso">
-                <a href="../../index.html"><img src="" alt=""></a>
+                <a href="../../pages/disciplinas.html"><img src="" alt=""></a>
                 <span>|</span>
                 <div class="links_header_curso"></div>
             </div>
