--- a/pages/disciplinas.html
+++ b/pages/disciplinas.html
@@ -10,7 +10,6 @@
 
 <body>
     <!-- Header -->
-    <a href="../Pagina_disciplinas/disciplinas.html"></a>
     <header>
         <div class="container_header_disciplinas">
 
@@ -23,6 +22,9 @@
                     <img src="../img/search.png" alt="">
                 </div>
             </div>
+
+            <div id="cadastro"> </div>
+
         </div>
     </header>
 
@@ -34,7 +36,7 @@
                 <div class="escrita_disciplinas">
                     <h1>Aqui estão nossos <span>CURSOS</span></h1>
                 </div>
-    
+
                 <div class="cabecario_disciplinas">
                     <div class="filtro_categorias">
                         <button data-categoria="todas">Todas</button>
@@ -60,6 +62,8 @@
 
 
     <script src="../js/disciplinas.js"></script>
+    <script src="../js/index.js"></script>
+
 </body>
 
 </html>
