--- a/pages/disciplinas.html
+++ b/pages/disciplinas.html
@@ -13,14 +13,18 @@
     <header>
         <div class="container_header_disciplinas">
 
-            <a href="../index.html"><img src="../img/seta.png" alt=""></a>
-
+            <div class="links_disciplinas">
+                <a href="../pages/index.html"><img src="../img/logo.png" alt=""></a>
+                <a href="../apostilas/">Explorar</a>
+                <a href="">Quem somo?</a>
+            </div>
             <div class="pesquisar">
-                <input type="text" id="pesquisarInput" placeholder=" Escreva aqui sua busca..!">
-
                 <div class="pesquisarInput_lado">
                     <img src="../img/search.png" alt="">
                 </div>
+                <input type="text" id="pesquisarInput" placeholder=" Escreva aqui sua busca..!">
+
+
             </div>
 
             <div id="cadastro"> </div>
