atualizacao de cadastro e headers

--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -21,7 +21,8 @@
         <div class="dhiovana">
           <img src="../img/loginIcon.png" alt="">
 
-          <form id="register-form">
+          <form id="register-form" class="register-form">
+
             <div class="inputDiv">
               <h2>Nome</h2>
               <input type="text" id="username" placeholder="Usuário" required>
@@ -31,6 +32,7 @@
               <h2>Senha</h2>
               <input type="password" id="password" placeholder="Senha" required>
             </div>
+
             <div class="buttonDiv">
               <button type="submit" class="registrar_button">Registrar</button>
               <button type="button" id="toggle-login">Não possui uma conta?</button>
@@ -38,7 +40,7 @@
 
           </form>
 
-          <form id="login-form" style="display: none;">
+          <form id="login-form" style="display: none;" class="login-form">
             <div class="inputDiv">
               <h2>Nome</h2>
               <input type="text" id="login-username" placeholder="Usuário" required>
