--- a/pages/disciplinas.html
+++ b/pages/disciplinas.html
@@ -15,8 +15,8 @@
 
             <div class="links_disciplinas">
                 <a href="../pages/index.html"><img src="../img/logo.png" alt=""></a>
-                <a href="../apostilas/">Explorar</a>
-                <a href="">Quem somo?</a>
+                <a href="../pages/disciplinas.html">Explorar</a>
+                <a href="">Quem somos?</a>
             </div>
             <div class="pesquisar">
                 <div class="pesquisarInput_lado">
