--- a/pages/index.html
+++ b/pages/index.html
@@ -15,8 +15,7 @@
     <div class="container_header_index">
       <div class="escrita_header_index">
         <img src="" alt="">
-        <a href="">Inicio</a>
-        <a href="">Cursos</a>
+        <a href="../pages/disciplinas.html">Explorar</a>
         <a href="">Quem somos?</a>
       </div>
       <div id="cadastro"> </div>
