logos e atualizacao dos headers

--- a/Pagina_disciplina/Java_modulo1/java1.html
+++ b/Pagina_disciplina/Java_modulo1/java1.html
@@ -14,7 +14,7 @@
         <div class="container_header_curso">
 
             <div class="escrita_header_curso">
-                <a href="../../index.html"><img src="" alt=""></a>
+                <a href="../../pages/disciplinas.html"><img src="../../img/MiniLogo.png" alt=""></a>
                 <span>|</span>
                 <div class="links_header_curso"></div>
             </div>
@@ -37,7 +37,7 @@
         </div>
     </div>
 
-    <!-- conteudo -->
+    <!-- Conteudo -->
     <div class="all">
 
         <div class="topicos">
@@ -57,8 +57,6 @@
             </div>
         </div>
     </div>
-
-    <footer>as</footer>
 
     <script src="../Java_modulo1/java1.js"></script>
 </body>
