--- a/pages/disciplinas.html
+++ b/pages/disciplinas.html
@@ -14,20 +14,23 @@
         <div class="container_header_disciplinas">
 
             <div class="links_disciplinas">
-                <a href="../pages/index.html"><img src="../img/logo.png" alt=""></a>
+                <a href="../pages/index.html"><img src="../img/logoLongaBranca.png" alt=""></a>
                 <a href="../pages/disciplinas.html">Explorar</a>
                 <a href="">Quem somos?</a>
             </div>
             <div class="pesquisar">
-                <div class="pesquisarInput_lado">
-                    <img src="../img/search.png" alt="">
-                </div>
-                <input type="text" id="pesquisarInput" placeholder=" Escreva aqui sua busca..!">
+                <div class="barra_pesquisa">
 
+                    <input type="text" id="pesquisarInput" placeholder=" Escreva aqui sua busca..!">
+                    <div class="pesquisarInput_lado">
+                        <img src="../img/search.png" alt="">
+                    </div>
+                </div>
+
+                <div id="cadastro"> </div>
 
             </div>
 
-            <div id="cadastro"> </div>
 
         </div>
     </header>
