--- a/Pagina_disciplina/Computacao_modulo1/computacao1.html
+++ b/Pagina_disciplina/Computacao_modulo1/computacao1.html
@@ -9,13 +9,12 @@
 </head>
 
 <body>
-
     <!-- Header -->
     <header>
         <div class="container_header_curso">
 
             <div class="escrita_header_curso">
-                <a href="../../index.html"><img src="" alt=""></a>
+                <a href="../../pages/disciplinas.html"><img src="../../img/MiniLogo.png" alt=""></a>
                 <span>|</span>
                 <div class="links_header_curso"></div>
             </div>
@@ -38,7 +37,7 @@
         </div>
     </div>
 
-    <!-- conteudo -->
+    <!-- Conteudo -->
     <div class="all">
 
         <div class="topicos">
@@ -58,8 +57,6 @@
             </div>
         </div>
     </div>
-
-    <footer>as</footer>
 
     <script src="../Computacao_modulo1/computacao1.js"></script>
 </body>
