--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -13,7 +13,7 @@
     <div class="container_cadastro">
 
       <div class="conteudo_cadastro">
-        <img src="../img/logo.png" alt="">
+        <img src="../img/logoLongaBranca.png" alt="">
       </div>
 
       <div class="conteudo_login-cadastro">
@@ -51,7 +51,7 @@
             </div>
             <div class="buttonDiv">
               <button type="submit" class="login_button">Entrar</button>
-              <button type="button" id="toggle-register">Registrar-se</button>
+              <button type="button" id="toggle-register">Não tem conta?</button>
             </div>
 
           </form>
