--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -35,7 +35,7 @@
 
             <div class="buttonDiv">
               <button type="submit" class="registrar_button">Registrar</button>
-              <button type="button" id="toggle-login">Não possui uma conta?</button>
+              <button type="button" id="toggle-login">Já possui uma conta?</button>
             </div>
 
           </form>
@@ -51,7 +51,7 @@
             </div>
             <div class="buttonDiv">
               <button type="submit" class="login_button">Entrar</button>
-              <button type="button" id="toggle-register">Não tem conta?</button>
+              <button type="button" id="toggle-register">Não possui uma conta?</button>
             </div>
 
           </form>
