--- a/pages/disciplinas.html
+++ b/pages/disciplinas.html
@@ -12,26 +12,21 @@
     <!-- Header -->
     <header>
         <div class="container_header_disciplinas">
-
             <div class="links_disciplinas">
                 <a href="../pages/index.html"><img src="../img/logoLongaBranca.png" alt=""></a>
                 <a href="../pages/disciplinas.html">Explorar</a>
                 <a href="">Quem somos?</a>
+                <button id="painelButton">Painel</button>
             </div>
             <div class="pesquisar">
                 <div class="barra_pesquisa">
-
                     <input type="text" id="pesquisarInput" placeholder=" Escreva aqui sua busca..!">
                     <div class="pesquisarInput_lado">
                         <img src="../img/search.png" alt="">
                     </div>
                 </div>
-
-                <div id="cadastro"> </div>
-
+                <div id="cadastro"></div>
             </div>
-
-
         </div>
     </header>
 
