sistema de curtir

--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -13,7 +13,7 @@
     <div class="container_cadastro">
 
       <div class="conteudo_cadastro">
-        <img src="../img/logoLongaBranca.png" alt="">
+        <a href="../pages/index.html"><img src="../img/logoLongaBranca.png" alt=""></a>
       </div>
 
       <div class="conteudo_login-cadastro">
@@ -46,7 +46,7 @@
               <input type="text" id="login-username" placeholder="Usuário" required>
             </div>
             <div class="inputDiv">
-              <h2>Senha</h2>
+              <h2>Senha</h2> 
               <input type="password" id="login-password" placeholder="Senha" required>
             </div>
             <div class="buttonDiv">
