--- a/pages/painel_usuario.html
+++ b/pages/painel_usuario.html
@@ -5,26 +5,47 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../css/painel.css">
+  <link rel="stylesheet" href="../css/disciplinas.css">
   <title>Painel de Usuário</title>
 </head>
 
 <body>
+  <header>
+    <div class="container_header_disciplinas">
+        <div class="links_disciplinas">
+            <a href="../pages/index.html"><img src="../img/logoLongaBranca.png" alt=""></a>
+            <a href="../pages/disciplinas.html">Explorar</a>
+            <a href="">Quem somos?</a>
+        </div>
+        <div class="pesquisar">
+            <div class="barra_pesquisa">
+                <input type="text" id="pesquisarInput" placeholder=" Escreva aqui sua busca..!">
+                <div class="pesquisarInput_lado">
+                    <img src="../img/search.png" alt="">
+                </div>
+            </div>
+            <div id="cadastro"></div>
+            <button id="painelButton">Painel</button>
+        </div>
+    </div>
+</header>
   <div class="painel">
     <div class="container_painel">
-      <h1>Bem-vindo, <span id="username-display"></span>!</h1>
-      <p>Este é o seu painel de usuário.</p>
-
+      <h1>Seja bem vindo!! <span id="username-display"></span>!</h1>
+      <p>Como está? este é seu painel de usuario.</p>
+      <div class="linha"></div>
+      <div id="favoritos">
+        <h2>Veja seus favoritos!!</h2>
+        <p>Aqui voce ve seus cursos prediletos!</p>
+        <div class="container_favoritos"></div>
+      </div>
+      <div class="linha"></div>
       <div class="acoes_painel">
+        <h2>Deseja sair?</h2>
         <button id="logout-button">Sair</button>
       </div>
     </div>
   </div>
-
-  <div id="favoritos">
-    <h2>Meus Favoritos</h2>
-    <div class="container_favoritos"></div>
-</div>
-
 
   <script src="../js/painel.js"></script>
 </body>
