--- a/pages/disciplinas.html
+++ b/pages/disciplinas.html
@@ -24,9 +24,10 @@
                         <img src="../img/search.png" alt="">
                     </div>
                 </div>
-                <div id="cadastro"></div>
-                <button id="painelButton">Painel</button>
-
+                <div class="acoes_disciplinas">
+                    <div id="cadastro"></div>
+                    <button id="painelButton">Painel</button>
+                </div>
             </div>
         </div>
     </header>
