--- a/pages/index.html
+++ b/pages/index.html
@@ -11,15 +11,18 @@
 
 <body>
 
+  <!-- header -->
   <header>
-    <div class="container_header_index">
-      <div class="escrita_header_index">
-        <img src="" alt="">
+    <div class="container_header_disciplinas">
+      <div class="links_disciplinas">
+        <a href="../pages/index.html"><img src="../img/logoLongaBranca.png" alt=""></a>
         <a href="../pages/disciplinas.html">Explorar</a>
         <a href="">Quem somos?</a>
       </div>
-      <div id="cadastro"> </div>
-
+      <div class="acoes_disciplinas">
+        <div id="cadastro"></div>
+        <button id="painelButton">Painel</button>
+      </div>
     </div>
   </header>
 
