--- a/pages/disciplinas.html
+++ b/pages/disciplinas.html
@@ -38,7 +38,7 @@
 
             <div class="conteudo_disciplinas">
                 <div class="escrita_disciplinas">
-                    <h1>Aqui estão nossos <span>CURSOS</span></h1>
+                    <h1>Aproveite nossos <span>CURSOS</span>!</h1>
                 </div>
 
                 <div class="cabecario_disciplinas">
