novo css pagina disciplinas

--- a/pages/disciplinas.html
+++ b/pages/disciplinas.html
@@ -14,15 +14,13 @@
         <div class="container_header_disciplinas">
             <div class="links_disciplinas">
                 <a href="../pages/index.html"><img src="../img/logoLongaBranca.png" alt=""></a>
-                <a href="../pages/disciplinas.html">Explorar</a>
-                <a href="">Quem somos?</a>
             </div>
             <div class="pesquisar">
                 <div class="barra_pesquisa">
-                    <input type="text" id="pesquisarInput" placeholder=" Escreva aqui sua busca..!">
                     <div class="pesquisarInput_lado">
                         <img src="../img/search.png" alt="">
                     </div>
+                    <input type="text" id="pesquisarInput" placeholder=" Escreva aqui sua busca..!">
                 </div>
                 <div class="acoes_disciplinas">
                     <div id="cadastro"></div>
@@ -38,7 +36,8 @@
 
             <div class="conteudo_disciplinas">
                 <div class="escrita_disciplinas">
-                    <h1>Aproveite nossos <span>CURSOS</span>!</h1>
+                    <h1>CATÁLAGO</h1>
+                    <p>Navegue por todo o conteúdo da VC ensino</p>
                 </div>
 
                 <div class="cabecario_disciplinas">
