--- a/pages/painel_usuario.html
+++ b/pages/painel_usuario.html
@@ -10,38 +10,42 @@
 </head>
 
 <body>
+  <!-- header -->
   <header>
     <div class="container_header_disciplinas">
-        <div class="links_disciplinas">
-            <a href="../pages/index.html"><img src="../img/logoLongaBranca.png" alt=""></a>
-            <a href="../pages/disciplinas.html">Explorar</a>
-            <a href="">Quem somos?</a>
+      <div class="links_disciplinas">
+        <a href="../pages/index.html"><img src="../img/logoLongaBranca.png" alt=""></a>
+        <a href="../pages/disciplinas.html">Explorar</a>
+        <a href="">Quem somos?</a>
+      </div>
+      <div class="pesquisar">
+        <div class="barra_pesquisa">
+          <input type="text" id="pesquisarInput" placeholder=" Escreva aqui sua busca..!">
+          <div class="pesquisarInput_lado">
+            <img src="../img/search.png" alt="">
+          </div>
         </div>
-        <div class="pesquisar">
-            <div class="barra_pesquisa">
-                <input type="text" id="pesquisarInput" placeholder=" Escreva aqui sua busca..!">
-                <div class="pesquisarInput_lado">
-                    <img src="../img/search.png" alt="">
-                </div>
-            </div>
-            <div id="cadastro"></div>
-            <button id="painelButton">Painel</button>
-        </div>
+        <div id="cadastro"></div>
+        <button id="painelButton">Painel</button>
+      </div>
     </div>
-</header>
+  </header>
+
   <div class="painel">
     <div class="container_painel">
-      <h1>Seja bem vindo!! <span id="username-display"></span>!</h1>
-      <p>Como está? este é seu painel de usuario.</p>
-      <div class="linha"></div>
+      <div class="bem_vindo">
+        <img src="../img/user.png" alt="">
+        <h1>Bem vindo de volta, <span id="username-display"></span>!</h1>
+      </div>
       <div id="favoritos">
-        <h2>Veja seus favoritos!!</h2>
-        <p>Aqui voce ve seus cursos prediletos!</p>
+        <div class="ver_favoritos">
+          <img src="../img/curtir.png" alt="">
+          <h2>Veja seus favoritos!!</h2>
+        </div>
         <div class="container_favoritos"></div>
       </div>
-      <div class="linha"></div>
       <div class="acoes_painel">
-        <h2>Deseja sair?</h2>
+        <h2>Deseja sair da conta?</h2>
         <button id="logout-button">Sair</button>
       </div>
     </div>
