--- a/pages/painel.html
+++ b/pages/painel.html
@@ -47,11 +47,11 @@
       <div class="acoes_painel">
         <h2>Deseja sair da conta?</h2>
         <button id="logout-button">Sair</button>
-      </div>
+      </div>      
     </div>
   </div>
 
-  <script src="../js/painel.js"></script>
+  <script src="../js/cadastro/painel.js"></script>
 </body>
 
 </html>
