sistema de cadastro quase pronto

--- a/pages/index.html
+++ b/pages/index.html
@@ -16,12 +16,13 @@
     <div class="container_header_disciplinas">
       <div class="links_disciplinas">
         <a href="../pages/index.html"><img src="../img/logoLongaBranca.png" alt=""></a>
+        <a href="">Explorar</a>
+        <a href="">Quem Somos?</a>
       </div>
       <div class="acoes_disciplinas">
-        <!-- Botões de cadastro, painel e logout -->
         <button id="cadastre-se" style="display: none;">Cadastre-se</button>
         <button id="painelButton" style="display: none;">Painel</button>
-        <button id="logout-button" style="display: none;">Logout</button>
+        <button id="logout-button" style="display: none;">Sair</button>
       </div>
     </div>
   </header>
