sistema de so poder entrar no curso logado

--- a/pages/disciplinas.html
+++ b/pages/disciplinas.html
@@ -23,7 +23,6 @@
                     <input type="text" id="pesquisarInput" placeholder=" Escreva aqui sua busca..!">
                 </div>
                 <div class="acoes_disciplinas">
-                    <!-- Botões de cadastro, painel e logout -->
                     <button id="cadastre-se" style="display: none;">Cadastre-se</button>
                     <button id="painelButton" style="display: none;">Painel</button>
                     <button id="logout-button" style="display: none;">Logout</button>
@@ -35,10 +34,9 @@
     <!-- Conteúdo -->
     <div id="disciplinas">
         <div class="container_disciplinas">
-
             <div class="conteudo_disciplinas">
                 <div class="escrita_disciplinas">
-                    <h1>CATÁLAGO</h1>
+                    <h1>CATÁLOGO</h1>
                     <p>Navegue por todo o conteúdo da VC ensino</p>
                 </div>
 
@@ -51,9 +49,7 @@
                     </div>
                 </div>
             </div>
-
             <div class="linha_grande"></div>
-
         </div>
     </div>
 
@@ -62,11 +58,10 @@
         <div class="cards"></div>
     </div>
 
-
     <!-- Firebase e Scripts -->
     <script type="module" src="../js/cadastro/dashboard.js"></script>
     <script src="../js/index.js"></script>
-    <script src="../js/disciplinas.js"></script>
+    <script type="module" src="../js/disciplinas.js"></script>
 
 </body>
 
