--- a/pages/painel.html
+++ b/pages/painel.html
@@ -33,9 +33,9 @@
 
   <div class="painel">
     <div class="container_painel">
-      <div class="bem_vindo">
+      <div class="user-panel">
         <img src="../img/user.png" alt="">
-        <h1>Bem vindo de volta, <span id="username-display"></span>!</h1>
+        <h1>Bem vindo de volta, <span id="user-email"></span>!</h1>
       </div>
       <div id="favoritos">
         <div class="ver_favoritos">
@@ -43,11 +43,7 @@
           <h2>Veja seus favoritos!!</h2>
         </div>
         <div class="container_favoritos"></div>
-      </div>
-      <div class="acoes_painel">
-        <h2>Deseja sair da conta?</h2>
-        <button id="logout-button">Sair</button>
-      </div>      
+      </div>    
     </div>
   </div>
 
@@ -55,3 +51,4 @@
 </body>
 
 </html>
+
