css pagina de login

--- a/pages/disciplinas.html
+++ b/pages/disciplinas.html
@@ -25,7 +25,7 @@
                 <div class="acoes_disciplinas">
                     <button id="cadastre-se" style="display: none;">Cadastre-se</button>
                     <button id="painelButton" style="display: none;">Painel</button>
-                    <button id="logout-button" style="display: none;">Logout</button>
+                    <button id="logout-button" style="display: none;">Sair</button>
                 </div>
             </div>
         </div>
