--- a/pages/login.html
+++ b/pages/login.html
@@ -1,39 +1,65 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>Login</title>
+  <link rel="stylesheet" href="../css/login_cadastro.css">
   <script type="module" src="https://www.gstatic.com/firebasejs/11.0.2/firebase-app.js"></script>
   <script type="module" src="https://www.gstatic.com/firebasejs/11.0.2/firebase-auth.js"></script>
   <style>
-    .message {
-      font-size: 16px;
-      margin-top: 10px;
-    }
-    .error {
-      color: red;
-    }
-    .success {
-      color: green;
-    }
+
   </style>
 </head>
-<body>
-  <div class="login-container">
-    <h2>Login</h2>
-    <form id="login-form">
-      <label for="email">Email:</label>
-      <input type="email" id="email" required>
-      <label for="password">Senha:</label>
-      <input type="password" id="password" required>
-      <button type="submit">Login</button>
-    </form>
-    <p>Não tem uma conta? <a href="register.html">Cadastre-se</a></p>
 
-    <!-- Mensagens de erro e sucesso -->
-    <div id="error-message" class="message error"></div>
-    <div id="success-message" class="message success"></div>
+<body>
+  <div class="login">
+    <div class="container_login">
+      <!-- primeiro -->
+      <div class="caixa_conteudo_login">
+        <div class="caixa">
+          <div class="header_caixa">
+            <a href="../pages/index.html">
+              Voltar para pagina
+              <img src="../img/setaBranca.png" alt="">
+            </a>
+          </div>
+          <div class="conteudo_caixa">
+            <img src="../img/logoLongaBranca.png" alt="">
+          </div>
+        </div>
+      </div>
+
+      <!-- segundo-->
+
+      <div class="login_form">
+        <div class="form_inputs">
+
+          <div class="escrita_form">
+            <h1>Faça seu login  </h1>
+            <p>Não tem uma conta? <a href="register.html">Cadastre-se</a></p>
+          </div>
+
+          <div class="linha"></div>
+
+          <form id="login-form">
+            <label for="email">Email:</label>
+            <input type="email" id="email" required >
+            <label for="password">Senha:</label>
+            <input type="password" id="password" required>
+            <button type="submit">Entrar</button>
+          </form>
+
+          <!-- Mensagens de erro e sucesso -->
+          <div id="error-message" class="message error"></div>
+          <div id="success-message" class="message success"></div>
+
+        </div>
+      </div>
+
+    </div>
   </div>
-  
+
   <script type="module" src="../js/cadastro/app.js"></script>
 </body>
+
 </html>
