sistema de nome

--- a/pages/painel.html
+++ b/pages/painel.html
@@ -35,7 +35,7 @@
     <div class="container_painel">
       <div class="user-panel">
         <img src="../img/user.png" alt="">
-        <h1>Bem vindo de volta, <span id="user-email"></span>!</h1>
+        <h1>Bem vindo de volta, <span id="user-name"></span>!</h1>
       </div>
       <div id="favoritos">
         <div class="ver_favoritos">
