--- a/pages/register.html
+++ b/pages/register.html
@@ -1,22 +1,29 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cadastro</title>
   <script type="module" src="https://www.gstatic.com/firebasejs/11.0.2/firebase-app.js"></script>
   <script type="module" src="https://www.gstatic.com/firebasejs/11.0.2/firebase-auth.js"></script>
- 
+  <link rel="stylesheet" href="styles.css"> <!-- Opcional, para estilização -->
 </head>
 <body>
   <div class="login-container">
     <h2>Cadastro</h2>
     <form id="register-form">
+      <label for="nome">Nome:</label>
+      <input type="text" id="nome" placeholder="Seu nome completo" required>
+
       <label for="email">Email:</label>
-      <input type="email" id="email" required>
+      <input type="email" id="email" placeholder="exemplo@dominio.com" required>
+
       <label for="password">Senha:</label>
-      <input type="password" id="password" required>
+      <input type="password" id="password" placeholder="Crie uma senha" required>
+
       <button type="submit">Cadastrar</button>
     </form>
-    <p>Já tem uma conta? <a href="../pages/login.html">Login</a></p>
+    <p>Já tem uma conta? <a href="../pages/login.html">Faça login</a></p>
   </div>
 
   <script type="module" src="../js/cadastro/register.js"></script>
