--- a/pages/register.html
+++ b/pages/register.html
@@ -1,31 +1,55 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cadastro</title>
   <script type="module" src="https://www.gstatic.com/firebasejs/11.0.2/firebase-app.js"></script>
   <script type="module" src="https://www.gstatic.com/firebasejs/11.0.2/firebase-auth.js"></script>
-  <link rel="stylesheet" href="styles.css"> <!-- Opcional, para estilização -->
+  <link rel="stylesheet" href="../css/login_cadastro.css">
 </head>
+
 <body>
-  <div class="login-container">
-    <h2>Cadastro</h2>
-    <form id="register-form">
-      <label for="nome">Nome:</label>
-      <input type="text" id="nome" placeholder="Seu nome completo" required>
 
-      <label for="email">Email:</label>
-      <input type="email" id="email" placeholder="exemplo@dominio.com" required>
+  <div class="registrar">
+    <div class="container_registrar">
 
-      <label for="password">Senha:</label>
-      <input type="password" id="password" placeholder="Crie uma senha" required>
+      <div id="register-form">
+        <h1>Bem vindo a VC ensinos</h1>
+        <div class="conteudo_form">
+          <div class="linha"></div>
 
-      <button type="submit">Cadastrar</button>
-    </form>
-    <p>Já tem uma conta? <a href="../pages/login.html">Faça login</a></p>
+          <label for="nome">Nome</label>
+          <input type="text" id="nome" required>
+          <label for="email">Email</label>
+          <input type="email" id="email" required>
+          <label for="password">Senha</label>
+          <input type="password" id="password" required>
+          <div id="error-message"></div>
+          <div class="cadastrar_button">
+            <button type="submit">Cadastrar</button>
+            <p>Ja tem uma conta? <a href="../pages/login.html">Login</a></p>
+          </div>
+
+        </div>
+      </div>
+
+      <div class="conteudo_registrar">
+        <div class="caixa_registrar">
+          <div class="header_caixa_register">
+            <a href="../pages/index.html">Voltar pagina inicial</a>
+          </div>
+          <div class="conteudo_caixa">
+            <img src="../img/logoLongaBranca.png" alt="">
+          </div>
+        </div>
+      </div>
+
+    </div>
   </div>
 
   <script type="module" src="../js/cadastro/register.js"></script>
 </body>
+
 </html>
