--- a/pages/register.html
+++ b/pages/register.html
@@ -7,45 +7,55 @@
   <title>Cadastro</title>
   <script type="module" src="https://www.gstatic.com/firebasejs/11.0.2/firebase-app.js"></script>
   <script type="module" src="https://www.gstatic.com/firebasejs/11.0.2/firebase-auth.js"></script>
-  <link rel="stylesheet" href="../css/login_cadastro.css">
+  <link rel="stylesheet" href="../css/login_cadastro.css"> <!-- Estilo compartilhado -->
 </head>
 
 <body>
-
-  <div class="registrar">
-    <div class="container_registrar">
-
-      <div id="register-form">
-        <h1>Bem vindo a VC ensinos</h1>
-        <div class="conteudo_form">
-          <div class="linha"></div>
-
-          <label for="nome">Nome</label>
-          <input type="text" id="nome" required>
-          <label for="email">Email</label>
-          <input type="email" id="email" required>
-          <label for="password">Senha</label>
-          <input type="password" id="password" required>
-          <div id="error-message"></div>
-          <div class="cadastrar_button">
-            <button type="submit">Cadastrar</button>
-            <p>Ja tem uma conta? <a href="../pages/login.html">Login</a></p>
-          </div>
-
-        </div>
-      </div>
-
-      <div class="conteudo_registrar">
-        <div class="caixa_registrar">
-          <div class="header_caixa_register">
-            <a href="../pages/index.html">Voltar pagina inicial</a>
+  <div class="login">
+    <div class="container_login">
+      <!-- primeiro -->
+      <div class="caixa_conteudo_login">
+        <div class="caixa">
+          <div class="header_caixa">
+            <a href="../pages/index.html">
+              Voltar para pagina
+              <img src="../img/setaBranca.png" alt="">
+            </a>
           </div>
           <div class="conteudo_caixa">
             <img src="../img/logoLongaBranca.png" alt="">
           </div>
         </div>
       </div>
+      <div class="login_form">
+        <div class="form_inputs">
 
+          <div class="escrita_form">
+            <h1>Crie sua conta por aqui!</h1>
+            <p>Crie sua conta e explore a VC ensinos!</p>
+          </div>
+
+          <form id="register-form">
+            <div class="linha"></div>
+            <div id="login-form">
+              <label for="nome">Nome</label>
+              <input type="text" id="nome" required>
+
+              <label for="email">Email</label>
+              <input type="email" id="email" required>
+
+              <label for="password">Senha</label>
+              <input type="password" id="password" required>
+
+              <button type="submit">Cadastrar</button>
+            </div>
+          </form>
+          <div class="escrita_form">
+            <p>Já tem uma conta? <a href="../pages/login.html">Faça login</a></p>
+          </div>
+
+        </div>
+      </div>
     </div>
   </div>
 
