--- a/Pagina_disciplina/Java_modulo1/java1.html
+++ b/Pagina_disciplina/Java_modulo1/java1.html
@@ -43,11 +43,12 @@
         <div class="topicos">
             <div class="escrita_topicos">
                 <h1>Conteúdos do curso</h1>
+                <button id="toggleTopicos">
+                    <img src="../../img/menosIcon.png" alt="" id="toggleIcon">
+                </button>
             </div>
-
             <div class="elementos"></div>
-
-        </div>
+        </div>        
 
         <div class="conteudos">
             <div class="conteudo">
