--- a/pages/index.html
+++ b/pages/index.html
@@ -16,7 +16,7 @@
     <div class="container_header_disciplinas">
       <div class="links_disciplinas">
         <a href="../pages/index.html"><img src="../img/logoLongaBranca.png" alt=""></a>
-        <a href="">Explorar</a>
+        <a href="../pages/disciplinas.html">Explorar</a>
         <a href="">Quem Somos?</a>
       </div>
       <div class="acoes_disciplinas">
@@ -27,21 +27,55 @@
     </div>
   </header>
 
-  <div class="disciplinas_about">
-    <div class="container_about">
-      <div class="escrever_about">
-        <h1>AQUI <span>"VC"</span> PESQUISA SEU CURSO!</h1>
-        <p>Nossa plataforma oferece diversos cursos para você!</p>
-        <a href="#disciplinas">Descer</a>
+  <!-- conteudo -->
+
+  <div class="index">
+    <div class="container_index">
+      <!-- foto -->
+
+      <div class="foto_index">
+        <div class="container_foto">
+          <img src="" alt="">
+        </div>
       </div>
-      <img src="../img/about.png" alt="">
-    </div>
-    <div id="cursos">
-      <a href="../pages/disciplinas.html">Veja mais cursos!</a>
+
+
+
+      <!-- Dilema -->
+
+      <div class="dilema">
+        <div class="container_dilema">
+          <h2></h2>
+        </div>
+      </div>
+
+      <!-- Cursos -->
+
+      <div class="cursos_exibir">
+        <div class="container_exibir">
+          <div class="escrita_exibir">
+            <h2>Ja conhece nosso catalogo?</h2>
+            <p>Aqui voce procura seu conhecimento.</p>
+            <a href="../pages/disciplinas.html">Ver mais...</a>
+            <div class="linha"></div>
+          </div>
+          <a href="../pages/disciplinas.html">
+            <div id="cards_exibir"></div>
+          </a>
+        </div>
+      </div>
+
+
     </div>
   </div>
 
-  <!-- Certifique-se de que o script está sendo carregado após o conteúdo da página -->
+
+
+
+
+  <!-- Scripts -->
+  <script src="../js/index/exibir_cards.js"></script>
+  <script src="../js/index/carrocel.js"></script>
   <script type="module" src="../js/cadastro/dashboard.js"></script>
 
 </body>
