nocas fotos e novo index

--- a/pages/index.html
+++ b/pages/index.html
@@ -15,7 +15,7 @@
   <header>
     <div class="container_header_disciplinas">
       <div class="links_disciplinas">
-        <a href="../pages/index.html"><img src="../img/logoLongaBranca.png" alt=""></a>
+        <a href="../pages/index.html"><img src="../img/logogGrandeBranca.png" alt=""></a>
         <a href="../pages/disciplinas.html">Explorar</a>
         <a href="">Quem Somos?</a>
       </div>
@@ -44,8 +44,20 @@
       <!-- Dilema -->
 
       <div class="dilema">
+        <h2>Venha para a vc ensinos!</h2>
         <div class="container_dilema">
-          <h2></h2>
+          <div class="caixa_dilema">
+            <img src="../img/index/study.png" alt="">
+            <h2>Aprende</h2>
+          </div>
+          <div class="caixa_dilema">
+            <img src="../img/index/ensina.png" alt="">
+            <h2>Ensina</h2>
+          </div>
+          <div class="caixa_dilema">
+            <img src="../img/index/contribui.png" alt="">
+            <h2>Contribui</h2>
+          </div>
         </div>
       </div>
 
@@ -75,7 +87,6 @@
 
   <!-- Scripts -->
   <script src="../js/index/exibir_cards.js"></script>
-  <script src="../js/index/carrocel.js"></script>
   <script type="module" src="../js/cadastro/dashboard.js"></script>
 
 </body>
