--- a/Pagina_disciplina/Java_modulo1/java1.html
+++ b/Pagina_disciplina/Java_modulo1/java1.html
@@ -14,7 +14,7 @@
         <div class="container_header_curso">
 
             <div class="escrita_header_curso">
-                <a href="../../pages/disciplinas.html"><img src="../../img/MiniLogo.png" alt=""></a>
+                <a href="../../pages/disciplinas.html"><img src="../../img/logoPequenaBranca.png" alt=""></a>
                 <span>|</span>
                 <div class="links_header_curso"></div>
             </div>
