imagens no register e login

--- a/pages/login.html
+++ b/pages/login.html
@@ -24,7 +24,7 @@
             </a>
           </div>
           <div class="conteudo_caixa">
-            <img src="../img/logoLongaBranca.png" alt="">
+            <img src="../img/logogGrandeBranca.png" alt="">
           </div>
         </div>
       </div>
