--- a/pages/index.html
+++ b/pages/index.html
@@ -86,15 +86,9 @@
 
           <div class="texto">
             <h2>Nossa empresa</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet sapiente cupiditate temporibus
-              eligendi ab error perspiciatis sed deserunt aut expedita aliquid quas dignissimos eaque velit,
-              dolore, autem sunt nulla dolorem explicabo magnam impedit culpa, aperiam consectetur tempora.
-              Provident similique cupiditate, ipsam perferendis laudantium sit ut? Ut quam quis beatae
-              perspiciatis voluptas fugit officiis maiores vero ipsam consequatur, vel dolor deserunt minima
-              repellendus atque esse numquam natus quidem! Fugit, eius blanditiis!</p>
-
+            <p>A Vc Ensinos é uma equipe acadêmica especializada em cursos profissionalizantes nas áreas de informática e tecnologia. Nosso objetivo é formar profissionais excepcionais para o mercado de trabalho. Iniciamos nossas atividades em 25 de novembro de 2024, desenvolvendo conteúdos institucionais, como atividades, videoaulas, textos e jogos educacionais, para garantir uma aprendizagem eficiente. Realizamos nosso trabalho porque acreditamos na educação como ferramenta para transformar vidas e construir um futuro melhor para nossos alunos e 'VC'! </p>
           </div>
-          <img src="img/amarelo.jpg" alt="">
+          <img src="../img//index/ulbra_sao_lucas_LthBS0M.jpeg" alt="">
         </div>
       </div>
 
@@ -128,6 +122,48 @@
 
     </div>
   </div>
+
+  <footer>
+    <div class="container_footer">
+      
+      <div class="footer_img">
+        <img src="../img/logogGrandeBranca.png" alt="">
+      </div>
+
+      <div class="linha_reta"></div>
+
+      <div class="links_footer">
+        <h1>LINKS</h1>
+        <a href="">Inicio</a>
+        <a href="">Explorar</a>
+        <a href="">Quem somos?</a>
+        <a href="">Creditos</a>
+      </div>
+
+      <div class="linha_reta"></div>
+
+
+      <div class="redes">
+        <h1>REDES</h1>
+        <img src="../img/index/instagram.png" alt="">
+        <img src="../img/index/facebook.png" alt="">
+      </div>
+
+      <div class="linha_reta"></div>
+      
+      <div class="apoio">
+        <h1>Projeto aplicado</h1>
+        <p>2024/2</p>
+        <img src="../img/index/saoLucas.png" alt="">
+      </div>
+    </div>
+
+    <div class="politicas">
+      <div class="container_politicas">
+        <a href="">NOSSAS POLITICAS</a>
+      </div>
+    </div>
+  </footer>
 
 
 
