--- a/pages/index.html
+++ b/pages/index.html
@@ -35,7 +35,7 @@
 
       <div class="foto_index">
         <div class="container_foto">
-          <img src="" alt="">
+          <img src="../WhatsApp Image 2024-11-29 at 10.03.26 PM.jpeg" alt="">
         </div>
       </div>
 
