--- a/pages/painel.html
+++ b/pages/painel.html
@@ -14,7 +14,7 @@
   <header>
     <div class="container_header_disciplinas">
       <div class="links_disciplinas">
-        <a href="../pages/index.html"><img src="../img/logoLongaBranca.png" alt=""></a>
+        <a href="../pages/index.html"><img src="../img/logogGrandeBranca.png" alt=""></a>
         <a href="../pages/disciplinas.html">Explorar</a>
         <a href="">Quem somos?</a>
       </div>
