--- a/pages/index.html
+++ b/pages/index.html
@@ -35,7 +35,7 @@
 
       <div class="foto_index">
         <div class="container_foto">
-          <img src="../WhatsApp Image 2024-11-29 at 10.03.26 PM.jpeg" alt="">
+          <img src="../img/index/capa.jpeg" alt="">
         </div>
       </div>
 
@@ -99,7 +99,7 @@
     <div class="container">
         <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3461.638865735799!2d-51.14190792520036!3d-29.81697592076417!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95196f2a593c6151%3A0xee0be7c4a3eba933!2sCol%C3%A9gio%20ULBRA%20S%C3%A3o%20Lucas!5e0!3m2!1spt-PT!2sbr!4v1732907124383!5m2!1spt-PT!2sbr"
-            width="500px" height="350px" style="border:0;" allowfullscreen="" loading="lazy"
+            width="500px" height="250px" style="border:0;" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"></iframe>
             
         <div class="texto">
