ajusts dos container index

--- a/pages/index.html
+++ b/pages/index.html
@@ -17,7 +17,7 @@
       <div class="links_disciplinas">
         <a href="../pages/index.html"><img src="../img/logogGrandeBranca.png" alt=""></a>
         <a href="../pages/disciplinas.html">Explorar</a>
-        <a href="">Quem Somos?</a>
+        <a href="#quem_somos">Quem Somos?</a>
       </div>
       <div class="acoes_disciplinas">
         <button id="cadastre-se" style="display: none;">Cadastre-se</button>
@@ -78,7 +78,7 @@
       </div>
       <!-- Quem somos? -->
 
-      <div class="quem_somos">
+      <div id="quem_somos">
         <div class="tit">
           <h1>Quem somos?</h1>
         </div>
