--- a/pages/index.html
+++ b/pages/index.html
@@ -18,6 +18,7 @@
         <a href="../pages/index.html"><img src="../img/logogGrandeBranca.png" alt=""></a>
         <a href="../pages/disciplinas.html">Explorar</a>
         <a href="#quem_somos">Quem Somos?</a>
+        <a href="../pages/creditos.html">Creditos</a>
       </div>
       <div class="acoes_disciplinas">
         <button id="cadastre-se" style="display: none;">Cadastre-se</button>
