responsivo indesx e pagina disciplinas

--- a/pages/disciplinas.html
+++ b/pages/disciplinas.html
@@ -59,6 +59,8 @@
         <div class="cards"></div>
     </div>
 
+
+    <!-- footer-->
     <footer>
         <div class="container_footer">
           
