--- a/pages/creditos.html
+++ b/pages/creditos.html
@@ -84,38 +84,38 @@
         <img src="BILL.jpg" alt="Descrição do Projeto 1">
     </section>
 
-    <!-- FOOTER -->
-
+    
+    <!-- footer -->
     <footer>
         <div class="container_footer">
 
             <div class="footer_img">
-                <img src="../img/logogGrandeBranca.png" alt="">
+                <img src="../img/logogGrandeBranca.png  " alt="" width="200px" height="200px">
             </div>
 
             <div class="linha_reta"></div>
 
             <div class="links_footer">
-                <h1>LINKS</h1>
+                <h1 class="sbT">LINKS</h1>
                 <a href="">Inicio</a>
                 <a href="">Explorar</a>
                 <a href="">Quem somos?</a>
                 <a href="">Creditos</a>
+
             </div>
 
             <div class="linha_reta"></div>
 
 
             <div class="redes">
-                <h1>REDES</h1>
+                <h1 class="sbT">REDES</h1>
                 <img src="../img/index/instagram.png" alt="">
                 <img src="../img/index/facebook.png" alt="">
             </div>
 
             <div class="linha_reta"></div>
-
             <div class="apoio">
-                <h1>Projeto aplicado</h1>
+                <h1 class="sbT">Projeto aplicado</h1>
                 <p>2024/2</p>
                 <img src="../img/index/saoLucas.png" alt="">
             </div>
@@ -123,7 +123,7 @@
 
         <div class="politicas">
             <div class="container_politicas">
-                <a href="">NOSSAS POLITICAS</a>
+                <a class="sbT" href="">NOSSAS POLITICAS</a>
             </div>
         </div>
     </footer>
