--- a/pages/index.html
+++ b/pages/index.html
@@ -179,7 +179,7 @@
 
     <div class="politicas">
       <div class="container_politicas">
-        <a class="sbT" href="">NOSSAS POLITICAS</a>
+        <a class="sbT" href="../pages/politicas.html">NOSSAS POLITICAS</a>
       </div>
     </div>
   </footer>
