--- a/pages/index.html
+++ b/pages/index.html
@@ -96,7 +96,7 @@
               ferramenta para transformar vidas e construir um futuro melhor para nossos alunos e 'VC'!
             </p>
           </div>
-          <img id="xiru" src="verde.avif" alt="">
+          <img id="xiru" src="../img/index//ulbraIndex.jpeg" alt="">
         </div>
       </div>
 
