--- a/pages/login.html
+++ b/pages/login.html
@@ -1,25 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login</title>
   <link rel="stylesheet" href="../css/login_cadastro.css">
   <script type="module" src="https://www.gstatic.com/firebasejs/11.0.2/firebase-app.js"></script>
   <script type="module" src="https://www.gstatic.com/firebasejs/11.0.2/firebase-auth.js"></script>
-  <style>
-
-  </style>
 </head>
 
 <body>
   <div class="login">
     <div class="container_login">
-      <!-- primeiro -->
+      <!-- Primeiro -->
       <div class="caixa_conteudo_login">
         <div class="caixa">
           <div class="header_caixa">
             <a href="../pages/index.html">
-              Voltar para pagina
+              Voltar para página
               <img src="../img/setaBranca.png" alt="">
             </a>
           </div>
@@ -29,13 +28,12 @@
         </div>
       </div>
 
-      <!-- segundo-->
-
+      <!-- Segundo -->
       <div class="login_form">
         <div class="form_inputs">
 
           <div class="escrita_form">
-            <h1>Faça seu login </h1>
+            <h1>Faça seu login</h1>
             <p>Não tem uma conta? <a href="register.html">Cadastre-se</a></p>
           </div>
 
@@ -55,7 +53,6 @@
 
         </div>
       </div>
-
     </div>
   </div>
 
